--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,18 +1,9 @@
-If you'd like to add your own custom styles:
-
-1. Create a file called `/assets/css/style.scss` in your site
-2. Add the following content to the top of the file, exactly as shown:
-    ```scss
+```scss
     ---
     ---
 
     @import "{{ site.theme }}";
-
-body, html {
-  height: 100%;
-}
-
-.bg {
+{
   background-image: url("https://file.garden/aPpGOu8r4WIJS6jI/GitHub%20Files/star.gif");
 
   /* Full height */
@@ -22,6 +13,4 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
-
-
     ```
