--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -12,5 +12,8 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
+    
+header {
+  display: none;
 }
     ```
