--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,7 @@
     {% include head-custom.html %}
   </head>
   <body>
-
+<p style="background-image: url('(https://file.garden/aPpGOu8r4WIJS6jI/GitHub%20Files/star.gif');">
       {{ content }}
 
       {% if site.github.private != true and site.github.license %}
