--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ "/assets/css/style.css?v=" | append: site.github.build_revision | relative_url }}">
     {% include head-custom.html %}
 
-    <p style="background-image: url('(https://file.garden/aPpGOu8r4WIJS6jI/GitHub%20Files/star.gif');">
+    <p style="background-image: url('https://file.garden/aPpGOu8r4WIJS6jI/GitHub%20Files/star.gif');">
     
   </head>
   <body>
