--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,10 +24,17 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/anchor-js/4.1.0/anchor.min.js" integrity="sha256-lZaRhKri35AyJSypXXs4o6OPFTbTmUoltBbDCbdzegg=" crossorigin="anonymous"></script>
     <script>anchors.add();</script>
     
-    <style>
+<style>
+div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+  border: 1px solid black;
+}
+
 img {
-  display: block;
-  margin: auto;
+  width:50%;
 }
 </style>
     
